# api/urls.py
@@ -1,6 +1,10 @@
 from django.urls import path
-from .views import HelloView
+from rest_framework_simplejwt.views import TokenRefreshView
+from .views import HelloView, RegisterView, CustomTokenObtainPairView
 
 urlpatterns = [
     path("hello/", HelloView.as_view(), name="hello"),
+    path("auth/register/", RegisterView.as_view(), name="auth-register"),
+    path("auth/token/", CustomTokenObtainPairView.as_view(), name="token_obtain_pair"),
+    path("auth/token/refresh/", TokenRefreshView.as_view(), name="token_refresh"),
 ]
